Add skateboard movies

--- a/index.html
+++ b/index.html
@@ -11,25 +11,8 @@
 </head>
 <body>
 
-<div>
-
-<h2>mp4</h2>
-<video controls="true" loop="true" autoplay="true" playsinline="true">
-  <source src="measure_E.mp4" type="video/mp4" width="100%">
-  <p>Your browser doesn't support HTML5 video.</p>
-</video>
-
-
-<h2>mov</h2>
-
-<video controls="true" loop="true" autoplay="true" playsinline="true">
-  <source src="measure_E.mov" type="video/mp4" width="100%">
-  <p>Your browser doesn't support HTML5 video.</p>
-</video>
-
-
-
-</div>
+Parking for some video files that can't be hosted elsehwere because of browser issues.
+Long story.
 
 </body>
 </html>
